infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  rules:
  - host: bn256.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
  tls:
  - hosts:
    - bn256.dev
    secretName: portfolio-tls-secret
